# chromadb-rag

./: .gitignore  README.md  main.py  pyproject.toml
docs/: aws.txt  chromadb.txt  large_random.txt  rag.txt
src/: ask.py  chunking.py  config.py  ingest.py  markdown_converter.py  pipeline.py
